feat: migrate to MariaDB and add period filtering

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Database Configuration
-DATABASE_URL=postgresql://crosswords:crosswords@localhost:5432/crosswords_db
+# Database Configuration (MariaDB)
+DATABASE_URL=mysql+pymysql://crosswords:crosswords@localhost:3306/crosswords_db
 
 # Redis Configuration
 REDIS_HOST=localhost
