--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,7 @@ uvicorn[standard]==0.38.0
 
 # Base de données
 sqlalchemy==2.0.40
-psycopg2-binary==2.9.11
-# Alternative moderne à psycopg2 (optionnel)
-# psycopg[binary]==3.2.3
+pymysql==1.1.1
 
 # Analyse de données
 pandas==2.3.3
